# Image_Stitching-Tool

./: MyBlending.cpp  MySift.cpp  MySift.h  README.md  main.cpp  targetver.h
Project/: CMakeLists.txt  Instructions.txt  MyBlending.h  MyMatching.cpp  MyMatching.h  MySift.cpp  main.cpp
